2010-06-11  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/Makefile.in: add missing $ for auto-mode-alist.
	It should actually be \\', but I was to lazy to look up how to
	escape ' in bash.

2010-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ore.spad.pamphlet: Faster multiplication
	in Ore algebras.

2010-06-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/oct.spad.pamphlet,
	src/hyper/htinp.c, src/interp/comp.lisp,
	src/interp/macros.lisp, src/interp/define.boot: Minor cleanups.

2010-06-01  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/lodof.input.pamphlet: convert to unittesting facility,
	add another currently failing test

	* src/input/mantepse.input.pamphlet: remove useless computation.

2010-05-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Try to simplify
	logarithms of algebraic constants.

2010-04-28  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/fricas.el: correct syntax table.

2010-04-11  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/bugs2010.input.pamphlet: exhibit failuire in coercion
	code when types with constant parameters are involved.

2010-04-08  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: add requirements for tab completion of
	file names.

2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lib/sockio-c.c, src/include/sockio-c.H1,
	src/sman/sman.c: Shorten startup/shutdown delays.

2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix problem with building graphic examples.
	* src/algebra/view3D.spad.pamphlet: makeViewport3D(): Do
	not trash old viewport.
	src/algebra/view2D.spad.pamphlet: makeViewport2D(): Likewise.
	src/hyper/pages/ug07.ht, src/input/mobius.input: Close
	viewports.

2010-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc (mostly whitespace) cleanup.
	* src/include/htadd.H1, src/include/session.H1,
	src/include/sman.H1, src/include/spadbuf.H1,