@@ -1,3 +1,8 @@
+2010-06-16  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el: also set text-properties of final bit
+	when restoring history, add = as punctuation to the syntax table.
+
 2010-06-11  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* contrib/emacs/Makefile.in: add missing $ for auto-mode-alist.
